# Papers-Agent

./: .gitignore  CMakeLists.txt  README.md  log_wrapper.h  login.json  main.cpp  makezl.md  register.json  test.json
agent_server/: .env  README.md  main.py  requirements.txt
agent_server/agent/: agent.py  agentPool.py  tools.py
controller/: LoginController.cpp  LoginController.h  chatController.cpp  papersController.h  queryController.cpp  queryController.h
query/: FaissQuery.cpp
src/: README.md  index.html
src/css/: style.css
src/js/: api.js  auth.js  chat.js
usersControl/: User.h  UsersManage.cpp  UsersManage.h
web_server/: README.md  log_wrapper.h  main.cpp
web_server/controller/: LoginController.cpp  chatController.h  papersController.cpp
web_server/query/: FaissQuery.h
web_server/sql/: sql_wrapper.h  sqlconnpool.cpp  sqlconnpool.h
web_server/src/: chat.html  login.html  papers.html  register.html
web_server/src/js/: api.js
web_server/usersControl/: UsersManage.cpp
